<resources>
    <string name="app_name">TeamTrack</string>
    <string name="activity_scoring">Scoring Activity</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="auto">Auto</string>
    <string name="tele">Tele</string>
    <string name="endgame">Endgame</string>

    <string name="high_goals">High Goals</string>
    <string name="middle_goals">Middle Goals</string>
    <string name="low_goals">Low Goals</string>
    <string name="wobbles_placed">Wobbles Placed</string>
    <string name="power_shots">Power Shots</string>
    <string name="navigated">Navigated</string>
    <string name="wobbles_drop">Wobbles in Drop</string>
    <string name="wobbles_start">Wobbles in Start</string>
    <string name="wobble_rings">Rings on Wobble</string>

    <string name="zero">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>

</resources>