<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_goals"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/teleHighGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/teleHighGoals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero" />

            <Button
                android:id="@+id/teleHighGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_goals"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/teleMiddleGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/teleMiddleGoals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero" />

            <Button
                android:id="@+id/teleMiddleGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_goals"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/teleLowGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/teleLowGoals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero" />

            <Button
                android:id="@+id/teleLowGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>