<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_shots"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/endgamePowerShotsDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/endgamePowerShots"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/endgamePowerShotsUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wobbles_drop"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/wobblesDropDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/wobblesDrop"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/wobblesDropUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wobbles_start"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/wobblesStartDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/wobblesStart"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/wobblesStartUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wobble_rings"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/wobbleRingsDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/wobbleRings"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/wobbleRingsUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>