<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/counter_text_padding"
            android:text="@string/high_goals" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/highGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />


            <TextView
                android:id="@+id/autoHighGoals"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />
            <Button
                android:id="@+id/highGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_goals"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/middleGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/autoMiddleGoals"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />
            <Button
                android:id="@+id/middleGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_goals"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lowGoalDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/autoLowGoals"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/lowGoalUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wobbles_placed"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/wobbleDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/autoWobbles"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                android:id="@+id/wobbleUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/counter_text_padding"
            android:text="@string/power_shots" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/powerShotDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/autoPowerShots"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/counter_text_padding"
                android:text="@string/zero"
                android:textAlignment="center" />
            <Button
                android:id="@+id/powerShotUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#7C52F1"
                android:text="@string/plus_sign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigated"
            android:padding="@dimen/counter_text_padding"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/navigatedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</LinearLayout>
</ScrollView>